--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@reduxjs/toolkit": "^1.9.1",
     "@sanity/client": "^4.0.1",
     "@sanity/image-url": "^1.0.1",
     "expo": "^47.0.13",
